force-app/main/default/objects/custom_create162__c/custom_create162__c.object-meta.xml
<CustomObject>
    <label>Custom created object162</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects162</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>