force-app/main/default/objects/custom_create162__c/fields/custom_create_162field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_162field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 162field529</label>
    <type>Checkbox</type>
</CustomField>