force-app/main/default/objects/custom_create162__c/fields/custom_create_162field681__c.field-meta.xml
<CustomField>
    <fullName>custom_create_162field681__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 162field681</label>
    <type>Checkbox</type>
</CustomField>